# poly

./: CMakeLists.txt  LICENCE  README.md  annotated.html  binary__editor_8hpp.html  classes.html  classpoly_1_1_binary_editor-members.html  classpoly_1_1_binary_editor.html  classpoly_1_1_common_binary_editor-members.html  classpoly_1_1_common_binary_editor.html  classpoly_1_1_custom_binary_editor-members.html  classpoly_1_1_custom_binary_editor.html  classpoly_1_1_custom_binary_editor_3_01_host_o_s_1_1k_linux_01_4-members.html  classpoly_1_1_custom_binary_editor_3_01_host_o_s_1_1k_linux_01_4.html  classpoly_1_1_custom_binary_editor_3_01_host_o_s_1_1k_mac_o_s_01_4-members.html  classpoly_1_1_custom_binary_editor_3_01_host_o_s_1_1k_mac_o_s_01_4.html  classpoly_1_1_custom_binary_editor_3_01_host_o_s_1_1k_windows_01_4-members.html  classpoly_1_1_custom_binary_editor_3_01_host_o_s_1_1k_windows_01_4.html  classpoly_1_1_o_compiler-members.html  classpoly_1_1_o_compiler.html  classpoly_1_1_polymorphic_engine-members.html  classpoly_1_1_polymorphic_engine.html  classpoly_1_1_polymorphic_engine_3_01_cipher_00_01_compiler_00_01_editor_00_01_host_o_s_1_1k_linux_01_4-members.html  classpoly_1_1_polymorphic_engine_3_01_cipher_00_01_compiler_00_01_editor_00_01_host_o_s_1_1k_linux_01_4.html  classpoly_1_1_polymorphic_engine_3_01_cipher_00_01_compiler_00_01_editor_00_01_host_o_s_1_1k_mac_o_s_01_4-members.html  classpoly_1_1_polymorphic_engine_3_01_cipher_00_01_compiler_00_01_editor_00_01_host_o_s_1_1k_mac_o_s_01_4.html  classpoly_1_1_polymorphic_engine_3_01_cipher_00_01_compiler_00_01_editor_00_01_host_o_s_1_1k_windows_01_4-members.html  classpoly_1_1_polymorphic_engine_3_01_cipher_00_01_compiler_00_01_editor_00_01_host_o_s_1_1k_windows_01_4.html  classpoly_1_1_polymorphic_engine_base-members.html  classpoly_1_1_polymorphic_engine_base.html  classpoly_1_1_random_generator-members.html  classpoly_1_1_random_generator.html  classpoly_1_1_specialized_tree_node-members.html  classpoly_1_1_specialized_tree_node.html  classpoly_1_1_tree_node-members.html  classpoly_1_1_tree_node.html  classpoly_1_1_virus-members.html  classpoly_1_1_virus.html  dir_2bf6146106b191d8ff3cfe67c1b10657.html  dir_cd00b995893a15ecfb90967cf9697552.html  (+43 more)
.github/workflows/: cmake.yml  docs.yml
cmake/: ExternalLibs.cmake
docs/: CMakeLists.txt  Doxyfile
example/: CMakeLists.txt  README.md  hello_world.cpp  virus_sample.cpp
include/engine/: binary_editor.hpp  code_container.hpp  encryption.hpp  engine.hpp  enums.hpp  executable_code.hpp  host_properties.hpp  utils.hpp
include/engine/linux/: binary_editor.hpp  engine.hpp
include/engine/macos/: binary_editor.hpp  engine.hpp
include/engine/windows/: binary_editor.hpp  engine.hpp
include/poly/: binary_editor.hpp  encryption.hpp  engine.hpp  enums.hpp  filesystem.hpp  host_properties.hpp  ocompiler.hpp  poly.hpp  utils.hpp  virus.hpp
include/poly/linux/: binary_editor.hpp  engine.hpp
include/poly/macos/: binary_editor.hpp  engine.hpp
include/poly/windows/: binary_editor.hpp  engine.hpp
scripts/windows/: mingw_gcc_linker.ld
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enums_4.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  (+33 more)
src/: CMakeLists.txt  binary_editor.tpp  code_container.cpp  encryption.tpp  engine.cpp  engine.tpp  ocompiler.cpp  utils.cpp  utils.tpp  virus.tpp
src/linux/: binary_editor.cpp  binary_editor.tpp  engine.tpp  get_entry_point_ra.S
src/macos/: binary_editor.cpp  binary_editor.tpp  engine.tpp  get_entry_point_ra.S
src/windows/: binary_editor.cpp  binary_editor.tpp  engine.tpp  get_entry_point_ra.S  get_entry_point_ra.asm
tests/: CMakeLists.txt
tests/integration_tests/: engine.cpp  virus.cpp
tests/test_binaries/: engine_test.cpp  file_test.cpp  hello_world.cpp  virus_test.cpp
tests/unit_tests/: binary_editor.cpp  code_container.cpp  encryption.cpp  ocompiler.cpp
